Fixed bug when selecting invoices or sorting invoices.

--- a/public/js/manifest.json
+++ b/public/js/manifest.json
@@ -1,10 +1,8 @@
 {
-  "chums.js": "/chums.25642185e39c0deb4440.js",
-  "chums.js.map": "/chums.25642185e39c0deb4440.js.map",
-  "main.js": "/main.34c2fadb288b185dd538.js",
-  "main.js.map": "/main.34c2fadb288b185dd538.js.map",
-  "vendors.js": "/vendors.42349ab219cdbc54ff19.js",
-  "vendors.js.map": "/vendors.42349ab219cdbc54ff19.js.map",
-  "main.34c2fadb288b185dd538.js.LICENSE.txt": "/main.34c2fadb288b185dd538.js.LICENSE.txt",
-  "vendors.42349ab219cdbc54ff19.js.LICENSE.txt": "/vendors.42349ab219cdbc54ff19.js.LICENSE.txt"
+  "main.js": "/main.436b367f935cadff88b1.js",
+  "main.js.map": "/main.436b367f935cadff88b1.js.map",
+  "vendors.js": "/vendors.96cec3ece83b40e35097.js",
+  "vendors.js.map": "/vendors.96cec3ece83b40e35097.js.map",
+  "chums.js": "/chums.15d1280c281b1e114461.js",
+  "chums.js.map": "/chums.15d1280c281b1e114461.js.map"
 }
