--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "chums-b2b",
-  "version": "2.0.68",
+  "version": "2.0.69",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js --watch --progress",
+    "start": "webpack serve --config webpack.dev.js --progress",
     "build": "npm --no-git-tag-version version patch && webpack --config webpack.prod.js --progress",
     "build-ssr": "babel server-render.js --out-file server-render.compiled.js",
     "start-ssr": "npm run build-ssr && nodemon server-render.compiled.js",
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "chums-ducks": "github:UtahGooner/chums-ducks",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "credit-card-type": "^9.1.0",
@@ -29,7 +30,7 @@
     "path-to-regexp": "^6.2.0",
     "prop-types": "^15.7.2",
     "pug": "^3.0.0",
-    "query-string": "^6.13.8",
+    "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^17.0.1",
