Migration to Bootstrap 5

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Steve Montgomery, Chums Inc",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "credit-card-type": "^9.1.0",
