--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.5.0",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "credit-card-type": "^9.1.0",
