--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "chums-b2b",
-  "version": "2.0.75",
+  "version": "2.0.76",
   "description": "",
   "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js --progress",
-    "build": "npm --no-git-tag-version version patch && webpack --config webpack.prod.js --progress",
+    "build": "webpack --config webpack.prod.js --progress",
     "build-ssr": "babel server-render.js --out-file server-render.compiled.js",
     "start-ssr": "npm run build-ssr && nodemon server-render.compiled.js",
     "build-all": "npm run build && npm run build-ssr"
