--- a/package.json
+++ b/package.json
@@ -63,12 +63,14 @@
     "nodemon": "^2.0.7",
     "react-hot-loader": "^4.13.0",
     "terser-webpack-plugin": "^5.1.1",
+    "ts-loader": "^9.2.4",
+    "typescript": "^4.4.2",
     "webpack": "^5.12.3",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1",
-    "webpack-manifest-plugin": "^3.0.0",
+    "webpack-dev-server": "^4.0.0",
+    "webpack-manifest-plugin": "^4.0.2",
     "webpack-merge": "^5.7.3"
   }
 }
