--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "credit-card-type": "^9.1.0",
     "date-fns": "^2.16.1",
     "debug": "^4.3.1",
+    "deepmerge": "^4.2.2",
     "express": "^4.17.1",
     "isomorphic-fetch": "^3.0.0",
     "jwt-decode": "^3.1.2",
