--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.prod.js --progress",
     "build-ssr": "babel server-render.js --out-file server-render.compiled.js",
     "start-ssr": "npm run build-ssr && nodemon server-render.compiled.js",
-    "build-all": "npm run build && npm run build-ssr"
+    "build-all": "npm run build && npm run build-ssr",
+    "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "author": "Steve Montgomery, Chums Inc",
   "license": "ISC",
@@ -57,6 +58,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
+    "auto-changelog": "^2.4.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^4.0.0",
@@ -73,5 +75,10 @@
     "webpack-dev-server": "^4.0.0",
     "webpack-manifest-plugin": "^4.0.2",
     "webpack-merge": "^5.7.3"
+  },
+  "auto-changelog": {
+    "template": "keepachangelog",
+    "unreleased": true,
+    "commitLimit": false
   }
 }
