--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "author": "Steve Montgomery, Chums Inc",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/base": "^5.0.0-alpha.121",
+    "@mui/material": "^5.11.13",
+    "@mui/x-date-pickers": "^6.0.2",
     "@reduxjs/toolkit": "^1.9.3",
     "b2b-types": "github:UtahGooner/b2b-types",
     "bootstrap": "^5.0.2",
@@ -23,6 +27,7 @@
     "compression": "^1.7.4",
     "credit-card-type": "^9.1.0",
     "date-fns": "^2.16.1",
+    "dayjs": "^1.11.7",
     "debug": "^4.3.1",
     "deepmerge": "^4.2.2",
     "express": "^4.17.1",
@@ -61,6 +66,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
+    "@types/react-router": "^5.1.20",
     "auto-changelog": "^2.4.0",
     "babel-loader": "^9.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
