--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18.2.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
     "react-helmet-async": "^1.3.0",
     "react-keydown": "^1.9.12",
     "react-onclickoutside": "^6.9.0",
