--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "serve-favicon": "^2.5.0",
+    "ssr-window": "^4.0.2",
     "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
@@ -67,7 +68,12 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
+    "@types/debug": "^4.1.8",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/serve-favicon": "^2.5.4",
     "auto-changelog": "^2.4.0",
     "babel-loader": "^9.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
