--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es6",
         "lib": [
             "dom",
             "dom.iterable",
@@ -21,7 +21,8 @@
         "jsx": "react",
         "declaration": false,
         "noImplicitAny": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "outDir": "dist"
     },
     "include": [
         "src/**/*"
