--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build-ssr": "babel server-render.js --out-file server-render.compiled.js",
     "start-ssr": "npm run build-ssr && nodemon server-render.compiled.js",
     "build-all": "npm run build && npm run build-ssr",
+    "start-dev-client": "webpack serve --config webpack.dev.client.js --progress",
+    "start-dev-server": "webpack serve --config webpack.dev.server.js --progress",
+    "build-client": "npx tsc && webpack --config webpack.prod.client.js --progress",
+    "build-server": "npx tsc",
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "author": "Steve Montgomery, Chums Inc",
@@ -31,6 +35,7 @@
     "debug": "^4.3.1",
     "decimal.js": "^10.4.3",
     "deepmerge": "^4.2.2",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "isomorphic-fetch": "^3.0.0",
     "jwt-decode": "^3.1.2",
@@ -69,6 +74,7 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
     "@types/debug": "^4.1.8",
+    "@types/isomorphic-fetch": "^0.0.36",
     "@types/react-dom": "^18.2.7",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router": "^5.1.20",
@@ -79,7 +85,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.8.2",
-    "nodemon": "^2.0.7",
+    "nodemon": "^3.0.1",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^9.2.4",
     "typescript": "^5.0.4",
