--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
     "@types/debug": "^4.1.8",
+    "@types/google.accounts": "^0.0.7",
     "@types/isomorphic-fetch": "^0.0.36",
+    "@types/numeral": "^2.0.2",
     "@types/react-dom": "^18.2.7",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router": "^5.1.20",
