--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/material": "^5.11.13",
     "@mui/x-date-pickers": "^6.0.2",
     "@reduxjs/toolkit": "^1.9.3",
-    "b2b-types": "github:UtahGooner/b2b-types",
+    "b2b-types": "github:ChumsInc/b2b-types",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "classnames": "^2.2.6",
