--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chums-b2b",
-  "version": "3.0.0-alpha.3",
+  "version": "3.0.0-alpha-4.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
