--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chums-b2b",
-  "version": "3.0.1-beta-1.0",
+  "version": "3.0.2-0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
