--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/x-date-pickers": "^6.0.2",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/validator": "^13.11.9",
     "b2b-types": "github:ChumsInc/b2b-types",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
@@ -47,7 +48,7 @@
     "path-to-regexp": "^6.2.0",
     "prop-types": "^15.7.2",
     "pug": "^3.0.0",
-    "query-string": "^8.1.0",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
@@ -64,7 +65,8 @@
     "serve-favicon": "^2.5.0",
     "ssr-window": "^4.0.2",
     "use-debounce": "^10.0.0",
-    "usehooks-ts": "^2.9.1",
+    "usehooks-ts": "^3.0.1",
+    "validator": "^13.11.0",
     "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
@@ -93,7 +95,7 @@
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.9.1",
+    "webpack-dev-server": "^5.0.2",
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.7.3"
   },
