--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.client.js --progress --stats-error-details",
+    "start": "webpack serve --config webpack.dev.client.js --progress",
     "build": "npm run build-all",
     "build-ssr": "npx tsc && webpack --config webpack.prod.server.js --progress",
     "start-ssr": "npm run build-ssr && nodemon server-render.compiled.js",
@@ -28,6 +28,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@types/lodash.debounce": "^4.0.7",
     "@types/validator": "^13.11.9",
+    "@types/zxcvbn": "^4.4.4",
     "b2b-types": "github:ChumsInc/b2b-types",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
@@ -68,7 +69,8 @@
     "use-debounce": "^10.0.0",
     "usehooks-ts": "^3.0.1",
     "validator": "^13.11.0",
-    "whatwg-fetch": "^3.5.0"
+    "whatwg-fetch": "^3.5.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
