--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "path-parse": "^1.0.6",
     "path-to-regexp": "^6.2.0",
     "prop-types": "^15.7.2",
-    "pug": "^3.0.0",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-document-title": "^2.0.3",
@@ -69,8 +68,7 @@
     "use-debounce": "^10.0.0",
     "usehooks-ts": "^3.0.1",
     "validator": "^13.11.0",
-    "whatwg-fetch": "^3.5.0",
-    "zxcvbn": "^4.4.2"
+    "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
