--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.client.js --progress",
+    "start": "webpack serve --config webpack.dev.client.js --progress --trace-deprecation",
     "build": "npm run build-all",
     "build-ssr": "npx tsc && webpack --config webpack.prod.server.js --progress",
     "start-ssr": "npm run build-ssr && nodemon server-render.compiled.js",
@@ -87,6 +87,9 @@
     "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.8.2",
+    "eslint": "^8.0.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react-redux": "^4.1.0",
     "nodemon": "^3.0.1",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^9.2.4",
