--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chums-b2b",
-  "version": "3.0.1-beta-10",
+  "version": "3.0.1-prerelease-1",
   "description": "",
   "main": "src/index.js",
   "scripts": {
