--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.client.cjs --progress",
     "build": "npm run clean && npm run build-all",
-    "build-ssr": "npx tsc && webpack --config webpack.prod.server.cjs --progress",
-    "start-ssr": "npm run build-ssr && nodemon server-render.compiled.js",
-    "build-all": "npx tsc && webpack --config webpack.prod.client.cjs --progress && webpack --config webpack.prod.server.js --progress",
+    "compile": "tsc",
+    "start-ssr": "npm run compile && nodemon dist/server/index.js",
+    "build-all": "npm run compile && npm run build-client",
     "start-dev-client": "webpack serve --config webpack.dev.client.cjs --progress",
     "start-dev-server": "webpack serve --config webpack.dev.server.cjs --progress",
-    "build-client": "npx tsc && webpack --config webpack.prod.client.cjs --progress",
-    "clean": "npx rimraf ./dist --preserve-root && mkdir dist",
+    "build-client": "webpack --config webpack.prod.client.cjs --progress",
+    "clean": "rimraf ./dist --preserve-root && mkdir dist",
     "start-server": "nodemon ./dist/server/index.js",
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
@@ -48,7 +48,6 @@
     "numeral": "^2.0.4",
     "path": "^0.12.7",
     "path-parse": "^1.0.6",
-    "path-to-regexp": "^6.2.0",
     "prop-types": "^15.7.2",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
@@ -77,7 +76,6 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
-    "@eslint/js": "^9.2.0",
     "@types/debug": "^4.1.8",
     "@types/google.accounts": "^0.0.14",
     "@types/isomorphic-fetch": "^0.0.39",
@@ -89,16 +87,14 @@
     "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.8.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "globals": "^15.2.0",
+    "eslint": "^9.2.0",
     "nodemon": "^3.0.1",
-    "rimraf": "^5.0.7",
-    "terser-webpack-plugin": "^5.3.10",
+    "stylelint": "^16.5.0",
+    "stylelint-config-standard": "^36.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^9.2.4",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.0.4",
-    "typescript-eslint": "^7.9.0",
     "webpack": "^5.83.0",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-chunk-hash": "^0.6.0",
