chore: multiple cleanups, add Google Analytics support, remove deprecated or unused code.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@mui/base": "^5.0.0-alpha.121",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.13",
-    "@mui/x-date-pickers": "^6.0.2",
+    "@mui/x-date-pickers": "^7.5.1",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/lodash.debounce": "^4.0.7",
@@ -76,6 +76,8 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
     "@types/debug": "^4.1.8",
     "@types/google.accounts": "^0.0.14",
     "@types/isomorphic-fetch": "^0.0.39",
@@ -87,7 +89,9 @@
     "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.8.2",
-    "eslint": "^9.2.0",
+    "eslint": "^9.3.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.3.0",
     "nodemon": "^3.0.1",
     "stylelint": "^16.5.0",
     "stylelint-config-standard": "^36.0.0",
@@ -95,6 +99,7 @@
     "ts-loader": "^9.2.4",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.0.4",
+    "typescript-eslint": "^7.10.0",
     "webpack": "^5.83.0",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-chunk-hash": "^0.6.0",
