--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.8",
   "description": "",
   "main": "src/index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "webpack serve --config webpack.dev.client.cjs --progress",
     "build": "npm run clean && npm run build-all",
@@ -73,6 +74,8 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-async-to-generator": "^7.24.6",
+    "@babel/plugin-transform-regenerator": "^7.24.6",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
@@ -89,7 +92,7 @@
     "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.8.2",
-    "eslint": "^9.3.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.3.0",
     "nodemon": "^3.0.1",
