--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js --progress",
-    "build": "webpack --config webpack.prod.js --progress",
+    "build": "npm run build-client && npm run build-ssr",
+    "build-client": "webpack --config webpack.prod.js --progress",
     "build-ssr": "babel server-render.js --out-file server-render.compiled.js",
     "start-ssr": "npm run build-ssr && nodemon server-render.compiled.js",
-    "build-all": "npm run build && npm run build-ssr",
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "author": "Steve Montgomery, Chums Inc",
