--- a/package.json
+++ b/package.json
@@ -14,11 +14,6 @@
   "author": "Steve Montgomery, Chums Inc",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/base": "^5.0.0-alpha.121",
-    "@mui/material": "^5.11.13",
-    "@mui/x-date-pickers": "^6.0.2",
     "@reduxjs/toolkit": "^1.9.3",
     "b2b-types": "github:ChumsInc/b2b-types",
     "bootstrap": "^5.0.2",
@@ -40,6 +35,7 @@
     "pug": "^3.0.0",
     "query-string": "^7.1.3",
     "react": "^17.0.1",
+    "react-datepicker": "^6.9.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -62,14 +58,17 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-router": "^5.1.20",
     "auto-changelog": "^2.4.0",
     "babel-loader": "^9.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.8.2",
+    "css-loader": "^7.1.2",
     "nodemon": "^3.0.1",
     "react-hot-loader": "^4.13.0",
+    "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^9.2.4",
     "typescript": "^5.0.4",
