--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chums-b2b",
-  "version": "2.2.18",
+  "version": "2.2.19",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -68,8 +68,10 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.8.2",
+    "css-loader": "^7.1.2",
     "nodemon": "^3.0.1",
     "react-hot-loader": "^4.13.0",
+    "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^9.2.4",
     "typescript": "^5.0.4",
