--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "chums-b2b",
   "version": "3.0.10",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/server/index.js",
   "type": "commonjs",
   "scripts": {
     "start": "webpack serve --config webpack.dev.client.cjs --progress",
     "build": "npm run build-all",
     "compile": "tsc",
     "start-ssr": "npm run compile && nodemon dist/server/index.js",
-    "build-all": "npm run compile && npm run build-client",
+    "build-all": "npm run build-server && npm run build-client",
     "start-dev-client": "webpack serve --config webpack.dev.client.cjs --progress",
     "start-dev-server": "webpack serve --config webpack.dev.server.cjs --progress",
     "build-client": "webpack --config webpack.prod.client.cjs --progress",
+    "build-server": "npm run clean && npm run compile",
     "clean": "rimraf ./dist --preserve-root && mkdir dist",
     "start-server": "nodemon ./dist/server/index.js",
     "version": "auto-changelog -p && git add CHANGELOG.md"
