--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "decimal.js": "^10.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
+    "helmet": "^7.1.0",
     "isomorphic-fetch": "^3.0.0",
     "jwt-decode": "^4.0.0",
     "numeral": "^2.0.4",
