--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/register": "^7.12.10",
     "@eslint/compat": "^1.0.1",
     "@eslint/js": "^9.3.0",
+    "@types/compression": "^1.7.5",
     "@types/debug": "^4.1.8",
     "@types/google.accounts": "^0.0.14",
     "@types/isomorphic-fetch": "^0.0.39",
