--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chums-b2b",
   "version": "3.0.17",
   "description": "",
-  "main": "src/server/index.js",
+  "main": "dist/server/index.js",
   "type": "commonjs",
   "scripts": {
     "start": "webpack serve --config webpack.dev.client.cjs --progress",
