--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "globals": "^15.8.0",
     "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.0.1",
+    "rimraf": "^6.0.0",
     "stylelint": "^16.5.0",
     "stylelint-config-standard": "^36.0.0",
     "terser-webpack-plugin": "^5.1.1",
