--- a/package.json
+++ b/package.json
@@ -80,12 +80,14 @@
     "babel-loader": "^9.1.0",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.2",
+    "css-loader": "^7.1.2",
     "eslint": "^9.6.0",
     "eslint-plugin-react": "^7.34.3",
     "globals": "^15.8.0",
     "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.0.1",
     "rimraf": "^6.0.0",
+    "style-loader": "^4.0.0",
     "stylelint": "^16.5.0",
     "stylelint-config-standard": "^36.0.0",
     "terser-webpack-plugin": "^5.1.1",
