--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "serve-favicon": "^2.5.0",
-    "whatwg-fetch": "^3.5.0"
+    "whatwg-fetch": "^3.5.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -79,9 +80,9 @@
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-chunk-hash": "^0.6.0",
     "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.9.1",
+    "webpack-dev-server": "^5.0.4",
     "webpack-manifest-plugin": "^5.0.0",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^6.0.1"
   },
   "auto-changelog": {
     "template": "keepachangelog",
